kubernetes/heimdall/components/openshift/route.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: heimdall
  namespace: heimdall
  labels:
    app.kubernetes.io/instance: heimdall
  annotations:
    externaldns.k8s.io: pihole
    route.openshift.io/termination: edge
spec:
  ingressClassName: openshift-default
  tls:
    - hosts:
        - heimdall.arthurvardevanyan.com
      secretName: heimdall-cert
  rules:
    - host: heimdall.arthurvardevanyan.com
      http:
        paths:
          - path: ""
            pathType: ImplementationSpecific
            backend:
              service:
                name: heimdall
                port:
                  name: http-80
